covid cases 2020 added

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -41,7 +41,7 @@
     <p>
         <h3>Number of Covid Cases in 2020: <span id="covidCases" /></h3>
     </p>
-    <table></table>
+    <table id="tabletohide"></table>
 
     <br>
     <h2> Compare the number of cat and dog adoptions between 2 years. (Which increased more?)</h2>
