--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -3,24 +3,84 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <style type="text/css" media="screen">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-        table {
-            table-layout: auto;
-            width: 800px;
+        body {
+            font-family: Georgia, Helvetica, sans-serif;
+        }
+
+        .header {
+            background-color: #f1f1f1;
+            padding: 30px;
+            text-align: center;
+            font-size: 35px;
+        }
+
+        .h1 {
+            background-color: #f1f1f1;
+            padding: 30px;
+            text-align: center;
+            font-size: 35px;
+        }
+
+        .footer {
+            background-color: #f1f1f1;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .btn {
+            background-color: #79bbff;
+            border-radius: 6px;
+            border: 1px solid #84bbf3;
+            display: inline-block;
+            cursor: pointer;
+            color: #ffffff;
+            font-family: Georgia;
+            font-size: 15px;
+            padding: 6px 24px;
+            text-decoration: none;
+            text-shadow: 0px 1px 0px #528ecc;
+        }
+
+        img.resize {
+            max-height: 33%;
+            max-width: 33%;
         }
 
         table, th, td {
-            border: 1px black solid;
+            width: 50%;
+            border-spacing: 5px;
+            border-radius: 6px;
+            border: 1px solid #84bbf3;
+        }
+
+        th {
+            background: hsl(150, 50%, 50%);
+            color: white;
+            text-shadow: 0px 1px 0px #528ecc;
+        }
+
+        tr {
+            text-align: center;
+        }
+
+
+        td {
         }
     </style>
-    <!-- <link rel="stylesheet" href="Content/Site.css"> -->
-    </head>
-    <body>
-        <center>
-        <h1>Covid 19's Effects on Pet Adoptions</h1>
+</head>
+<body>
+    <center>
+        <div class="header">Covid 19's Effects on Pet Adoptions</div>
+        <br />
+        <img class="resize" src="Content/image.png" />
         <h2> Number of pet adoptions in 2019 versus 2020. (Did it increase?)</h2>
-        <button id="getTotalPets"> Get number of pet adoptions</button>
+
+        <button id="getTotalPets" class="btn"> Get number of pet adoptions</button>
         <p>
 
         </p>
@@ -72,8 +132,8 @@
         </select>
 
         <br />
-
-        <button id="getCatsVSDogs" class="btn btn-primary"> Get cat adoptions versus dog adoptions</button>
+        <br />
+        <button id="getCatsVSDogs" class="btn"> Get cat adoptions versus dog adoptions</button>
         <p>
 
         </p>
@@ -108,8 +168,8 @@
         </select>
 
         <br />
-
-        <button id="getTop3"> Get top 10 popular breeds</button>
+        <br />
+        <button id="getTop3" class="btn"> Get top 10 popular breeds</button>
         <p>
 
         </p>
@@ -120,9 +180,10 @@
                 </tr>
             </thead>
         </table>
-        </center>
-
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
-        <script src="Scripts/main.js"></script>
-    </body>
-            </html >
+    </center>
+    <br />
+    <div class="footer"></div>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
+    <script src="Scripts/main.js"></script>
+</body>
+</html>
