--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -3,187 +3,143 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+    <style type="text/css" media="screen">
 
-        body {
-            font-family: Georgia, Helvetica, sans-serif;
-        }
-
-        .header {
-            background-color: #f1f1f1;
-            padding: 30px;
-            text-align: center;
-            font-size: 35px;
-        }
-
-        .h1 {
-            background-color: #f1f1f1;
-            padding: 30px;
-            text-align: center;
-            font-size: 35px;
-        }
-
-        .footer {
-            background-color: #f1f1f1;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .btn {
-            background-color: #79bbff;
-            border-radius: 6px;
-            border: 1px solid #84bbf3;
-            display: inline-block;
-            cursor: pointer;
-            color: #ffffff;
-            font-family: Georgia;
-            font-size: 15px;
-            padding: 6px 24px;
-            text-decoration: none;
-            text-shadow: 0px 1px 0px #528ecc;
-        }
-
-        img.resize {
-            max-height: 33%;
-            max-width: 33%;
+        table {
+            table-layout: auto;
+            width: 800px;
         }
 
         table, th, td {
-            width: 50%;
-            border-spacing: 5px;
-            border-radius: 6px;
-            border: 1px solid #84bbf3;
-        }
-
-        th {
-            background: hsl(150, 50%, 50%);
-            color: white;
-            text-shadow: 0px 1px 0px #528ecc;
-        }
-
-        tr {
-            text-align: center;
-        }
-
-
-        td {
+            border: 1px black solid;
         }
     </style>
+    <!-- <link rel="stylesheet" href="Content/Site.css"> -->
 </head>
 <body>
-    <center>
-        <div class="header">Covid 19's Effects on Pet Adoptions</div>
-        <br />
-        <img class="resize" src="Content/image.png" />
-        <h2> Number of pet adoptions in 2019 versus 2020. (Did it increase?)</h2>
+    <div class="p-3 mb-2 bg-info text-dark">
+        <center>
+            <h1>Covid 19's Effects on Pet Adoptions</h1>
+            <h2> Number of pet adoptions in 2019 versus 2020. (Did it increase?)</h2>
+            <button id="getTotalPets"> Get number of pet adoptions</button>
+            <p>
 
-        <button id="getTotalPets" class="btn"> Get number of pet adoptions</button>
-        <p>
+            </p>
+            <ul id="displayPets1"> </ul>
 
-        </p>
-        <ul id="displayPets1"> </ul>
+            <table id="table1" hidden>
+                <thead>
+                    <tr>
+                        <th> 2019</th>
+                        <th> 2020</th>
+                    </tr>
+                    <tr>
+                        <td id="row1-col1" hidden></td>
+                        <td id="row2-col2" hidden></td>
+                    </tr>
+                </thead>
+            </table>
 
-        <table id="table1" hidden>
-            <thead>
-                <tr>
-                    <th> 2019</th>
-                    <th> 2020</th>
-                </tr>
-                <tr>
-                    <td id="row1-col1" hidden></td>
-                    <td id="row2-col2" hidden></td>
-                </tr>
-            </thead>
-        </table>
+            <p>
+                <h3>Number of Covid Cases in 2020: <span id="covidCases" /></h3>
+            </p>
+            <table id="tabletohide"></table>
 
-        <p>
-            <h3>Number of Covid Cases in 2020: <span id="covidCases" /></h3>
-        </p>
-        <table id="tabletohide"></table>
+            <br>
+            <h2> Compare the number of cat and dog adoptions between 2 years. (Which increased more?)</h2>
 
-        <br>
-        <h2> Compare the number of cat and dog adoptions between 2 years. (Which increased more?)</h2>
+            <label for="years1"> Choose first year:</label>
+            <select name="years1" id="years1-select">
+                <option value="2015"> 2015</option>
+                <option value="2016"> 2016</option>
+                <option value="2017"> 2017</option>
+                <option value="2018"> 2018</option>
+                <option value="2019"> 2019</option>
+                <option value="2020"> 2020</option>
+                <option value="2021"> 2021</option>
+            </select>
 
-        <label for="years1"> Choose first year:</label>
-        <select name="years1" id="years1-select">
-            <option value="2015"> 2015</option>
-            <option value="2016"> 2016</option>
-            <option value="2017"> 2017</option>
-            <option value="2018"> 2018</option>
-            <option value="2019"> 2019</option>
-            <option value="2020"> 2020</option>
-            <option value="2021"> 2021</option>
-        </select>
+            <br />
 
-        <br />
+            <label for="years2"> Choose second year:</label>
+            <select name="years2" id="years2-select">
+                <option value="2015"> 2015</option>
+                <option value="2016"> 2016</option>
+                <option value="2017"> 2017</option>
+                <option value="2018"> 2018</option>
+                <option value="2019"> 2019</option>
+                <option value="2020"> 2020</option>
+                <option value="2021"> 2021</option>
+            </select>
 
-        <label for="years2"> Choose second year:</label>
-        <select name="years2" id="years2-select">
-            <option value="2015"> 2015</option>
-            <option value="2016"> 2016</option>
-            <option value="2017"> 2017</option>
-            <option value="2018"> 2018</option>
-            <option value="2019"> 2019</option>
-            <option value="2020"> 2020</option>
-            <option value="2021"> 2021</option>
-        </select>
+            <br />
 
-        <br />
-        <br />
-        <button id="getCatsVSDogs" class="btn"> Get cat adoptions versus dog adoptions</button>
-        <p>
+            <button id="getCatsVSDogs" class="btn btn-primary"> Get cat adoptions versus dog adoptions</button>
+            <p>
 
-        </p>
+            </p>
 
-        <table id="table2">
-            <thead>
-                <tr>
-                </tr>
-            </thead>
-        </table>
+            <table id="table2">
+                <thead>
+                    <tr>
+                    </tr>
+                </thead>
+            </table>
 
-        <br>
-        <h2> Top 10 popular cat or dog breeds by year</h2>
+            <br>
+            <h2> Top 10 popular cat or dog breeds by year</h2>
 
-        <label for="animal"> Choose an animal:</label>
-        <select name="animal" id="animal-select">
-            <option value="1"> Cat</option>
-            <option value="2"> Dog</option>
-        </select>
+            <label for="animal"> Choose an animal:</label>
+            <select name="animal" id="animal-select">
+                <option value="1"> Cat</option>
+                <option value="2"> Dog</option>
+            </select>
 
-        <br />
+            <br />
 
-        <label for="breedYear"> Choose a year:</label>
-        <select name="breedYear" id="breedYear-select">
-            <option value="2015"> 2015</option>
-            <option value="2016"> 2016</option>
-            <option value="2017"> 2017</option>
-            <option value="2018"> 2018</option>
-            <option value="2019"> 2019</option>
-            <option value="2020"> 2020</option>
-            <option value="2021"> 2021</option>
-        </select>
+            <label for="breedYear"> Choose a year:</label>
+            <select name="breedYear" id="breedYear-select">
+                <option value="2015"> 2015</option>
+                <option value="2016"> 2016</option>
+                <option value="2017"> 2017</option>
+                <option value="2018"> 2018</option>
+                <option value="2019"> 2019</option>
+                <option value="2020"> 2020</option>
+                <option value="2021"> 2021</option>
+            </select>
 
-        <br />
-        <br />
-        <button id="getTop3" class="btn"> Get top 10 popular breeds</button>
-        <p>
+            <br />
 
-        </p>
+            <button id="getTop3"> Get top 10 popular breeds</button>
 
-        <table id="table3">
-            <thead>
-                <tr>
-                </tr>
-            </thead>
-        </table>
-    </center>
-    <br />
-    <div class="footer"></div>
+
+
+            <table id="table3" style="display: none">
+                <thead>
+                    <tr>
+                    </tr>
+                </thead>
+            </table>
+
+
+        </center>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="display: none">
+                        <div class="card-body">
+                            <canvas id="myChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script src="Scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
