--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -174,7 +174,7 @@
 
         </p>
 
-        <table id="table3">
+        <table id="table3" style="display: none">
             <thead>
                 <tr>
                 </tr>
@@ -182,8 +182,20 @@
         </table>
     </center>
     <br />
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card" style="display: none">
+                    <div class="card-body">
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script src="Scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
